--- a/notebooks/GPT-4-evals.ipynb
+++ b/notebooks/GPT-4-evals.ipynb
@@ -14,8 +14,7 @@
     "2. Using the Safe RLHF framework send comparisons of responses to the Open AI API.\n",
     "3. Evaluate and plot the worst-case score for comparison\n",
     "\n",
-    "- Maybe we should use a non-CD approach as this method directly competed with the RMOD scores in the paper\n",
-    "    - Start with RS (0.6, 0.4): hh_results_RS_0.4,0.6_tokens256_num_samples1024.csv\n",
+    "Start with RS (0.6, 0.4): hh_results_RS_0.4,0.6_tokens256_num_samples1024.csv\n",
     "\n",
     "\n",
     "RMOD: lambda=0.5, 16 branches, 8 depth blocksize"
