UPDATE single response evaluation

--- a/notebooks/investigate_llm_single_eval.ipynb
+++ b/notebooks/investigate_llm_single_eval.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,10 +26,25 @@
     "    worst_case_rewards2 = get_rewards(df2).min(axis=1)\n",
     "    return np.mean((worst_case_rewards1 > worst_case_rewards2) * 1.0 + (worst_case_rewards1 == worst_case_rewards2) * 0.5)\n",
     "\n",
-    "def get_win_rate_from_file(path1, path2):\n",
+    "def get_normalized_win_rate(df1, df2):\n",
+    "    rewards1 = get_rewards(df1)\n",
+    "    rewards2 = get_rewards(df2)\n",
+    "    print(rewards1.mean(axis=0), rewards2.mean(axis=0))\n",
+    "    r2_mean = rewards2.mean(axis=0)\n",
+    "    r2_std = rewards2.std(axis=0)\n",
+    "    r1_norm = (rewards1 - r2_mean) / r2_std\n",
+    "    r2_norm = (rewards2 - r2_mean) / r2_std\n",
+    "    return np.mean((r1_norm > r2_norm) * 1.0 + (r1_norm == r2_norm) * 0.5)\n",
+    "\n",
+    "def get_win_rate_from_file(path1, path2, type=\"worst_case\"):\n",
     "    df1 = pd.read_csv(path1)\n",
     "    df2 = pd.read_csv(path2)\n",
-    "    return get_worst_case_win_rate(df1, df2)"
+    "    if type == \"worst_case\":\n",
+    "        return get_worst_case_win_rate(df1, df2)\n",
+    "    elif type == \"normalized\":\n",
+    "        return get_normalized_win_rate(df1, df2)\n",
+    "    else:\n",
+    "        raise ValueError(f\"Invalid type: {type}\")\n"
    ]
   },
   {
@@ -44,6 +59,7 @@
     "path_robust = \"/home/hingdoong/0_codes/robust-multi-objective-decoding/results_llm_single_eval/gpt4o_robust_blockwise_vcoef0.5_K16B16_100prompts.csv\"\n",
     "path_uniform = \"/home/hingdoong/0_codes/robust-multi-objective-decoding/results_llm_single_eval/gpt4o_uniform_blockwise_K16B16_100prompts.csv\"\n",
     "path_distill = \"/home/hingdoong/0_codes/robust-multi-objective-decoding/results_llm_single_eval/gpt4o_RMOD_distillation_K16B16_100prompts.csv\"\n",
+    "path_grpo = \"\"\n",
     "\n",
     "\n",
     "\n"
@@ -51,18 +67,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "path_ref = \"/home/hingdoong/0_codes/robust-multi-objective-decoding/results_llm_single_eval/gpt4o_reference_300prompts.csv\"\n",
+    "path_harmless = \"/home/hingdoong/0_codes/robust-multi-objective-decoding/results_llm_single_eval/gpt4o_harmless_blockwise_K16B16_300prompts.csv\"\n",
+    "path_helpful = \"/home/hingdoong/0_codes/robust-multi-objective-decoding/results_llm_single_eval/gpt4o_helpful_blockwise_K16B16_300prompts.csv\"\n",
+    "path_robust = \"/home/hingdoong/0_codes/robust-multi-objective-decoding/results_llm_single_eval/gpt4o_robust_blockwise_vcoef0.5_K16B16_300prompts.csv\"\n",
+    "path_uniform = \"/home/hingdoong/0_codes/robust-multi-objective-decoding/results_llm_single_eval/gpt4o_uniform_blockwise_K16B16_300prompts.csv\"\n",
+    "path_distill = \"/home/hingdoong/0_codes/robust-multi-objective-decoding/results_llm_single_eval/gpt4o_RMOD_distillation_K16B16_300prompts.csv\"\n",
+    "path_grpo = \"/home/hingdoong/0_codes/robust-multi-objective-decoding/results_llm_single_eval/gpt4o_GRPO_uniform_300prompts.csv\"\n",
+    "path_dpo = \"/home/hingdoong/0_codes/robust-multi-objective-decoding/results_llm_single_eval/gpt4o_DPO_uniform_300prompts.csv\"\n",
+    "\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.57\n",
-      "0.545\n",
-      "0.565\n",
-      "0.61\n",
-      "0.55\n"
+      "0.53\n",
+      "0.5416666666666666\n",
+      "0.54\n",
+      "0.59\n",
+      "0.54\n",
+      "0.5383333333333333\n",
+      "0.535\n"
      ]
     }
    ],
@@ -72,6 +109,46 @@
     "print(get_win_rate_from_file(path_robust, path_ref))\n",
     "print(get_win_rate_from_file(path_uniform, path_ref))\n",
     "print(get_win_rate_from_file(path_distill, path_ref))\n",
+    "print(get_win_rate_from_file(path_grpo, path_ref))\n",
+    "print(get_win_rate_from_file(path_dpo, path_ref))\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[8.92666667 7.73      ] [8.72333333 7.75333333]\n",
+      "0.5275\n",
+      "[8.83       7.78333333] [8.72333333 7.75333333]\n",
+      "0.535\n",
+      "[8.98333333 7.88333333] [8.72333333 7.75333333]\n",
+      "0.55\n",
+      "[9.04333333 7.97333333] [8.72333333 7.75333333]\n",
+      "0.59\n",
+      "[8.94 7.86] [8.72333333 7.75333333]\n",
+      "0.5533333333333333\n",
+      "[8.90333333 7.81333333] [8.72333333 7.75333333]\n",
+      "0.5491666666666667\n",
+      "[8.87       7.72666667] [8.72333333 7.75333333]\n",
+      "0.535\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(get_win_rate_from_file(path_harmless, path_ref, type=\"normalized\"))\n",
+    "print(get_win_rate_from_file(path_helpful, path_ref, type=\"normalized\"))\n",
+    "print(get_win_rate_from_file(path_robust, path_ref, type=\"normalized\"))\n",
+    "print(get_win_rate_from_file(path_uniform, path_ref, type=\"normalized\"))\n",
+    "print(get_win_rate_from_file(path_distill, path_ref, type=\"normalized\"))\n",
+    "print(get_win_rate_from_file(path_grpo, path_ref, type=\"normalized\"))\n",
+    "print(get_win_rate_from_file(path_dpo, path_ref, type=\"normalized\"))\n",
+    "\n",
     "\n"
    ]
   },
