--- a/notebooks/investigate_llm_single_eval.ipynb
+++ b/notebooks/investigate_llm_single_eval.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +34,9 @@
     "    r2_std = rewards2.std(axis=0)\n",
     "    r1_norm = (rewards1 - r2_mean) / r2_std\n",
     "    r2_norm = (rewards2 - r2_mean) / r2_std\n",
-    "    return np.mean((r1_norm > r2_norm) * 1.0 + (r1_norm == r2_norm) * 0.5)\n",
+    "    wcr1_norm = r1_norm.min(axis=1)\n",
+    "    wcr2_norm = r2_norm.min(axis=1)\n",
+    "    return np.mean((wcr1_norm > wcr2_norm) * 1.0 + (wcr1_norm == wcr2_norm) * 0.5)\n",
     "\n",
     "def get_win_rate_from_file(path1, path2, type=\"worst_case\"):\n",
     "    df1 = pd.read_csv(path1)\n",
@@ -67,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -79,6 +81,12 @@
     "path_distill = \"/home/hingdoong/0_codes/robust-multi-objective-decoding/results_llm_single_eval/gpt4o_RMOD_distillation_K16B16_300prompts.csv\"\n",
     "path_grpo = \"/home/hingdoong/0_codes/robust-multi-objective-decoding/results_llm_single_eval/gpt4o_GRPO_uniform_300prompts.csv\"\n",
     "path_dpo = \"/home/hingdoong/0_codes/robust-multi-objective-decoding/results_llm_single_eval/gpt4o_DPO_uniform_300prompts.csv\"\n",
+    "path_rmod_smallv = \"/home/hingdoong/0_codes/robust-multi-objective-decoding/results_llm_single_eval/gpt4o_robust_blockwise_vcoef0.1_K16B16_300prompts.csv\"\n",
+    "path_rmod_largev = \"/home/hingdoong/0_codes/robust-multi-objective-decoding/results_llm_single_eval/gpt4o_robust_blockwise_vcoef1.0_K16B16_300prompts.csv\"\n",
+    "path_rmod_b64 = \"/home/hingdoong/0_codes/robust-multi-objective-decoding/results_llm_single_eval/gpt4o_robust_blockwise_vcoef0.5_K16B64_300prompts.csv\"\n",
+    "path_rmod_b64_smallv = \"/home/hingdoong/0_codes/robust-multi-objective-decoding/results_llm_single_eval/gpt4o_robust_blockwise_vcoef0.1_K16B64_300prompts.csv\"\n",
+    "path_rmod_b64_largev = \"/home/hingdoong/0_codes/robust-multi-objective-decoding/results_llm_single_eval/gpt4o_robust_blockwise_vcoef1.0_K16B64_300prompts.csv\"\n",
+    "path_rmod_b64_uniform = \"/home/hingdoong/0_codes/robust-multi-objective-decoding/results_llm_single_eval/gpt4o_uniform_blockwise_K16B64_300prompts.csv\"\n",
     "\n",
     "\n",
     "\n"
@@ -86,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [
     {
@@ -99,7 +107,13 @@
       "0.59\n",
       "0.54\n",
       "0.5383333333333333\n",
-      "0.535\n"
+      "0.535\n",
+      "0.5633333333333334\n",
+      "0.5166666666666667\n",
+      "0.575\n",
+      "0.5716666666666667\n",
+      "0.5533333333333333\n",
+      "0.6116666666666667\n"
      ]
     }
    ],
@@ -111,12 +125,18 @@
     "print(get_win_rate_from_file(path_distill, path_ref))\n",
     "print(get_win_rate_from_file(path_grpo, path_ref))\n",
     "print(get_win_rate_from_file(path_dpo, path_ref))\n",
+    "print(get_win_rate_from_file(path_rmod_smallv, path_ref))\n",
+    "print(get_win_rate_from_file(path_rmod_largev, path_ref))\n",
+    "print(get_win_rate_from_file(path_rmod_b64, path_ref))\n",
+    "print(get_win_rate_from_file(path_rmod_b64_smallv, path_ref))\n",
+    "print(get_win_rate_from_file(path_rmod_b64_largev, path_ref))\n",
+    "print(get_win_rate_from_file(path_rmod_b64_uniform, path_ref))\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [
     {
@@ -124,19 +144,31 @@
      "output_type": "stream",
      "text": [
       "[8.92666667 7.73      ] [8.72333333 7.75333333]\n",
-      "0.5275\n",
+      "0.5283333333333333\n",
       "[8.83       7.78333333] [8.72333333 7.75333333]\n",
-      "0.535\n",
+      "0.5566666666666666\n",
       "[8.98333333 7.88333333] [8.72333333 7.75333333]\n",
-      "0.55\n",
+      "0.545\n",
       "[9.04333333 7.97333333] [8.72333333 7.75333333]\n",
-      "0.59\n",
+      "0.635\n",
       "[8.94 7.86] [8.72333333 7.75333333]\n",
-      "0.5533333333333333\n",
+      "0.5483333333333333\n",
       "[8.90333333 7.81333333] [8.72333333 7.75333333]\n",
-      "0.5491666666666667\n",
+      "0.5633333333333334\n",
       "[8.87       7.72666667] [8.72333333 7.75333333]\n",
-      "0.535\n"
+      "0.5316666666666666\n",
+      "[8.99333333 7.90333333] [8.72333333 7.75333333]\n",
+      "0.5666666666666667\n",
+      "[9.03666667 7.74      ] [8.72333333 7.75333333]\n",
+      "0.54\n",
+      "[9.03       7.92666667] [8.72333333 7.75333333]\n",
+      "0.5933333333333334\n",
+      "[9.04666667 7.96333333] [8.72333333 7.75333333]\n",
+      "0.5983333333333334\n",
+      "[8.99333333 7.82666667] [8.72333333 7.75333333]\n",
+      "0.5683333333333334\n",
+      "[9.04       8.02333333] [8.72333333 7.75333333]\n",
+      "0.6383333333333333\n"
      ]
     }
    ],
@@ -148,6 +180,13 @@
     "print(get_win_rate_from_file(path_distill, path_ref, type=\"normalized\"))\n",
     "print(get_win_rate_from_file(path_grpo, path_ref, type=\"normalized\"))\n",
     "print(get_win_rate_from_file(path_dpo, path_ref, type=\"normalized\"))\n",
+    "print(get_win_rate_from_file(path_rmod_smallv, path_ref, type=\"normalized\"))\n",
+    "print(get_win_rate_from_file(path_rmod_largev, path_ref, type=\"normalized\"))\n",
+    "print(get_win_rate_from_file(path_rmod_b64, path_ref, type=\"normalized\"))\n",
+    "print(get_win_rate_from_file(path_rmod_b64_smallv, path_ref, type=\"normalized\"))\n",
+    "print(get_win_rate_from_file(path_rmod_b64_largev, path_ref, type=\"normalized\"))\n",
+    "print(get_win_rate_from_file(path_rmod_b64_uniform, path_ref, type=\"normalized\"))\n",
+    "\n",
     "\n",
     "\n"
    ]
