UPDATE additional results from BoK-reward experiments

--- a/notebooks/investigate_prompt2.ipynb
+++ b/notebooks/investigate_prompt2.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,6 +27,18 @@
     "    wr = ((worst_case_rewards1 > worst_case_rewards2) * 1.0 + (worst_case_rewards1 == worst_case_rewards2) * 0.5).mean()\n",
     "    wr_stderr = ((worst_case_rewards1 > worst_case_rewards2) * 1.0 + (worst_case_rewards1 == worst_case_rewards2) * 0.5).std() / np.sqrt(len(worst_case_rewards1))\n",
     "    return wr, wr_stderr\n",
+    "\n",
+    "def worst_case_reward_improvement(df1, df2):\n",
+    "    rewards1 = get_rewards(df1)\n",
+    "    rewards2 = get_rewards(df2)\n",
+    "    wcri = (rewards1.min(axis=1) - rewards2.min(axis=1)).mean()\n",
+    "    wcri_stderr = ((rewards1.min(axis=1) - rewards2.min(axis=1))).std() / np.sqrt(len(rewards1.min(axis=1)))\n",
+    "    return wcri, wcri_stderr\n",
+    "\n",
+    "def get_wcri_from_file(path1, path2):\n",
+    "    df1 = pd.read_csv(path1)\n",
+    "    df2 = pd.read_csv(path2)\n",
+    "    return worst_case_reward_improvement(df1, df2)\n",
     "\n",
     "def get_normalized_win_rate(df1, df2):\n",
     "    rewards1 = get_rewards(df1)\n",
@@ -55,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -72,18 +84,21 @@
     "path_rs = f\"/home/hingdoong/0_codes/robust-multi-objective-decoding/results_prompt2/gpt4o_RS_0.6,0.4_{num_prompts}prompts.csv\"\n",
     "path_mod = f\"/home/hingdoong/0_codes/robust-multi-objective-decoding/results_prompt2/gpt4o_MOD_0.6,0.4_{num_prompts}prompts.csv\"\n",
     "# path_rmod_largev = \"/home/hingdoong/0_codes/robust-multi-objective-decoding/results_prompt2/gpt4o_robust_blockwise_vcoef1.0_K16B16_300prompts.csv\"\n",
-    "# path_rmod_b64 = \"/home/hingdoong/0_codes/robust-multi-objective-decoding/results_prompt2/gpt4o_robust_blockwise_vcoef0.5_K16B64_300prompts.csv\"\n",
-    "# path_rmod_b64_smallv = \"/home/hingdoong/0_codes/robust-multi-objective-decoding/results_prompt2/gpt4o_robust_blockwise_vcoef0.1_K16B64_300prompts.csv\"\n",
-    "# path_rmod_b64_largev = \"/home/hingdoong/0_codes/robust-multi-objective-decoding/results_prompt2/gpt4o_robust_blockwise_vcoef1.0_K16B64_300prompts.csv\"\n",
-    "# path_rmod_b64_uniform = \"/home/hingdoong/0_codes/robust-multi-objective-decoding/results_prompt2/gpt4o_uniform_blockwise_K16B64_300prompts.csv\"\n",
-    "\n",
+    "path_rmod_b64 = f\"/home/hingdoong/0_codes/robust-multi-objective-decoding/results_prompt2/gpt4o_robust_blockwise_vcoef0.5_K16B64_{num_prompts}prompts.csv\"\n",
+    "path_rmod_b64_smallv = f\"/home/hingdoong/0_codes/robust-multi-objective-decoding/results_prompt2/gpt4o_robust_blockwise_vcoef0.1_K16B64_{num_prompts}prompts.csv\"\n",
+    "path_rmod_b64_largev = f\"/home/hingdoong/0_codes/robust-multi-objective-decoding/results_prompt2/gpt4o_robust_blockwise_vcoef1.0_K16B64_{num_prompts}prompts.csv\"\n",
+    "path_rmod_b64_uniform = f\"/home/hingdoong/0_codes/robust-multi-objective-decoding/results_prompt2/gpt4o_uniform_blockwise_K16B64_{num_prompts}prompts.csv\"\n",
+    "path_bok_harmless = f\"/home/hingdoong/0_codes/robust-multi-objective-decoding/results_prompt2/gpt4o_BoK_harmless_{num_prompts}prompts.csv\"\n",
+    "path_bok_helpful = f\"/home/hingdoong/0_codes/robust-multi-objective-decoding/results_prompt2/gpt4o_BoK_helpful_{num_prompts}prompts.csv\"\n",
+    "path_grbok = f\"/home/hingdoong/0_codes/robust-multi-objective-decoding/results_prompt2/gpt4o_GRBoK_{num_prompts}prompts.csv\"\n",
+    "path_bok_uniform = f\"/home/hingdoong/0_codes/robust-multi-objective-decoding/results_prompt2/gpt4o_BoK_uniform_{num_prompts}prompts.csv\"\n",
     "\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -99,7 +114,13 @@
       "(np.float64(0.5283203125), np.float64(0.011887566229438203))\n",
       "(np.float64(0.59130859375), np.float64(0.011808439595727076))\n",
       "(np.float64(0.552734375), np.float64(0.012164078483987546))\n",
-      "(np.float64(0.4716796875), np.float64(0.012436465385669962))\n"
+      "(np.float64(0.4716796875), np.float64(0.012436465385669962))\n",
+      "(np.float64(0.568359375), np.float64(0.011788320660871284))\n",
+      "(np.float64(0.5888671875), np.float64(0.01161301115397482))\n",
+      "(np.float64(0.57666015625), np.float64(0.011585018920881958))\n",
+      "(np.float64(0.51123046875), np.float64(0.012005001996915803))\n",
+      "(np.float64(0.58544921875), np.float64(0.011770442360810188))\n",
+      "(np.float64(0.52587890625), np.float64(0.011862891558519906))\n"
      ]
     }
    ],
@@ -115,11 +136,62 @@
     "print(get_win_rate_from_file(path_rs, path_ref))\n",
     "print(get_win_rate_from_file(path_mod, path_ref))\n",
     "# print(get_win_rate_from_file(path_rmod_largev, path_ref))\n",
-    "# print(get_win_rate_from_file(path_rmod_b64, path_ref))\n",
-    "# print(get_win_rate_from_file(path_rmod_b64_smallv, path_ref))\n",
+    "print(get_win_rate_from_file(path_rmod_b64, path_ref))\n",
+    "print(get_win_rate_from_file(path_rmod_b64_smallv, path_ref))\n",
     "# print(get_win_rate_from_file(path_rmod_b64_largev, path_ref))\n",
-    "# print(get_win_rate_from_file(path_rmod_b64_uniform, path_ref))\n",
-    "\n"
+    "print(get_win_rate_from_file(path_rmod_b64_uniform, path_ref))\n",
+    "print(get_win_rate_from_file(path_bok_harmless, path_ref))\n",
+    "print(get_win_rate_from_file(path_bok_helpful, path_ref))\n",
+    "print(get_win_rate_from_file(path_grbok, path_ref))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(np.float64(0.0322265625), np.float64(0.04492120120331017))\n",
+      "(np.float64(0.16015625), np.float64(0.04640197503021846))\n",
+      "(np.float64(0.193359375), np.float64(0.04303212260938507))\n",
+      "(np.float64(0.2587890625), np.float64(0.044606793474235476))\n",
+      "(np.float64(0.244140625), np.float64(0.04606399707354129))\n",
+      "(np.float64(0.1396484375), np.float64(0.04333374666473832))\n",
+      "(np.float64(0.08203125), np.float64(0.044184563297739524))\n",
+      "(np.float64(0.3125), np.float64(0.04423731114416455))\n",
+      "(np.float64(0.125), np.float64(0.05108084699461727))\n",
+      "(np.float64(-0.185546875), np.float64(0.05485070942469494))\n",
+      "(np.float64(0.2060546875), np.float64(0.044511569425860514))\n",
+      "(np.float64(0.3037109375), np.float64(0.04346027790757424))\n",
+      "(np.float64(0.2890625), np.float64(0.04323908986865563))\n",
+      "(np.float64(0.015625), np.float64(0.044471137984623925))\n",
+      "(np.float64(0.26171875), np.float64(0.04502640876451222))\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(get_wcri_from_file(path_harmless, path_ref))\n",
+    "print(get_wcri_from_file(path_helpful, path_ref))\n",
+    "print(get_wcri_from_file(path_robust, path_ref))\n",
+    "print(get_wcri_from_file(path_uniform, path_ref))\n",
+    "print(get_wcri_from_file(path_distill, path_ref))\n",
+    "print(get_wcri_from_file(path_grpo, path_ref))\n",
+    "print(get_wcri_from_file(path_dpo, path_ref))\n",
+    "print(get_wcri_from_file(path_rmod_smallv, path_ref))\n",
+    "print(get_wcri_from_file(path_rs, path_ref))\n",
+    "print(get_wcri_from_file(path_mod, path_ref))\n",
+    "# print(get_win_rate_from_file(path_rmod_largev, path_ref))\n",
+    "print(get_wcri_from_file(path_rmod_b64, path_ref))\n",
+    "print(get_wcri_from_file(path_rmod_b64_smallv, path_ref))\n",
+    "# print(get_win_rate_from_file(path_rmod_b64_largev, path_ref))\n",
+    "print(get_wcri_from_file(path_rmod_b64_uniform, path_ref))\n",
+    "print(get_wcri_from_file(path_bok_harmless, path_ref))\n",
+    "print(get_wcri_from_file(path_bok_helpful, path_ref))\n",
+    "# print(get_wcri_from_file(path_grbok, path_ref))\n",
+    "# print(get_wcri_from_file(path_bok_uniform, path_ref))\n"
    ]
   },
   {
@@ -906,7 +978,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "venv_sd0",
    "language": "python",
    "name": "python3"
   },
